examples/test/testpolicy1230.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1230
  namespace: namespace51
spec:
  podSelector:
    matchLabels:
      key20: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value17
          key35: value39
          key42: value12
      podSelector:
        matchLabels:
          key42: value28
          key48: value48
